Try fix scroll modal on mobile

--- a/src/components/CreateListModal/CreateListModal.module.scss
+++ b/src/components/CreateListModal/CreateListModal.module.scss
@@ -14,6 +14,8 @@
 
     @media (max-width: $screen-sm) {
         align-items: unset;
+        overscroll-behavior: contain;
+        touch-action: none;
     }
 }
 
